objects/CalloutMetadataHeader__c.object
<CustomObject>
    <fields>
        <fullName>CalloutMetadataId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callout Metadata</label>
        <referenceTo>CalloutMetadata__c</referenceTo>
        <relationshipLabel>Callout Metadata Headers</relationshipLabel>
        <relationshipName>CalloutMetadataHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SystemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Callout Metadata Headers</relationshipLabel>
        <relationshipName>CalloutMetadataHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Callout Metadata Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CalloutMetadataId__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callout Metadata Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>